--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
+  firebase_core: ^2.25.4
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.10
