--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,17 @@ environment:
   sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.15.6
+  firebase_analytics: ^10.8.7
   firebase_auth: ^4.17.4
   firebase_core: ^2.25.4
+  firebase_crashlytics: ^3.4.16
+  firebase_remote_config: ^4.3.15
+  firebase_storage: ^11.6.7
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.10
+  freezed_annotation: ^2.4.1
   go_router: ^13.2.0
   hooks_riverpod: ^2.4.10
   riverpod_annotation: ^2.3.4
@@ -22,6 +28,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   riverpod_generator: ^2.3.11
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
